fgdiag (0.2.40) UNRELEASED; urgency=low

  * remove fgdiag-open4 package, as all current versions of debian include
    libopen4-ruby1.8. 

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 25 Jan 2011 14:22:47 -0800

fgdiag (0.2.39) freegeek-test; urgency=low

  [ Ryan Niebur ]
  * make mem_debug default
  * remove lspci
  
  [ Vagrant Cascadian ]
  * disktest:
    - when DISKTEST_REQUIRED_NUMBER_OF_DRIVES variable is set, convert to an
      integer before using.
    - initiate a smart self-test before testing the drives. (Closes: #21275)

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 18 Jan 2011 14:54:36 -0800

fgdiag (0.2.38) freegeek-test; urgency=low

  * video-detect
    - add some disabled code to use lspci to determine the
      video ram
    - clean up the script a bit
    - add a mem_debug option to show values for all
      detection methods
    - source /etc/fgdiag.conf if it exists

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Jul 2010 15:08:43 -0700

fgdiag (0.2.37) freegeek-test; urgency=low

  * split out the reading and the writing in the user display rather
    than trying to calculate a single percentage for the whole badblocks
    run (Closes: #18546)

 -- Ryan Niebur <ryan@debian.org>  Tue, 06 Jul 2010 11:12:39 -0700

fgdiag (0.2.36) freegeek-test; urgency=low

  * clean up logged messages yet more

 -- Ryan Niebur <ryan@debian.org>  Tue, 22 Jun 2010 17:27:43 -0700

fgdiag (0.2.35) freegeek-test; urgency=low

  * clean up logged messages
  * fix smart test to actually be ran

 -- Ryan Niebur <ryan@debian.org>  Tue, 22 Jun 2010 17:10:00 -0700

fgdiag (0.2.34) freegeek-test; urgency=low

  * fix handling of syslog errors when the log is empty (when errors pop
    up before disktest starts)

 -- Ryan Niebur <ryan@debian.org>  Tue, 22 Jun 2010 16:35:50 -0700

fgdiag (0.2.33) freegeek-test; urgency=low

  * add dmesg output to loglines in hopes of catching some DMA errors
    (Closes: #18626)
