@@ -1,9 +1,13 @@
 fgdiag (0.2.40) UNRELEASED; urgency=low
 
+  [ Vagrant Cascadian ]
   * remove fgdiag-open4 package, as all current versions of debian include
     libopen4-ruby1.8. 
 
- -- Vagrant Cascadian <vagrant@debian.org>  Tue, 25 Jan 2011 14:22:47 -0800
+  [ Ryan Niebur ]
+  * log to the fgdb.rb install at $DISKTEST_LOGTO_FGDB if its set
+
+ -- Ryan Niebur <ryan@debian.org>  Tue, 15 Feb 2011 21:03:22 -0800
 
 fgdiag (0.2.39) freegeek-test; urgency=low
 
